--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/learns.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="RID tech">
     <link rel="stylesheet" href="/src/assets/bootstrap/css/bootstrap.min.css">
     <title>E-learning</title>
   </head>
