From Screen Launching

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="icon" type="image/svg+xml" href="/learns.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="RID tech">
+    <meta name="description" content="E-learning, web-based learning platform.">
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/src/assets/bootstrap/css/bootstrap.min.css">
     <title>E-learning</title>
   </head>
