--- a/index.html
+++ b/index.html
@@ -13,8 +13,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/learns.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="RID tech">
+    <meta name="author" content="RID Tech">
     <meta name="description" content="E-learning, web-based learning platform.">
+    <meta name="keywords" content="E-learning, web-based learning, online courses, education, learning platform">
+    <meta name="theme-color" content="#f7fffe">
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="E-learning">
+    <meta name="application-name" content="E-learning">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/learns.png">
+    <meta name="msapplication-config" content="/browserconfig.xml">
+    <meta name="apple-touch-icon" sizes="180x180" href="/learns.png"> -->
+    <link rel="preload" href="/manifest.json" as="fetch" crossorigin="anonymous">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/src/assets/bootstrap/css/bootstrap.min.css">
     <title>E-learning</title>
