Optimization of the E-learning Website

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/learns.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="googlebot" content="notranslate">
     <meta name="author" content="RID Tech">
     <meta name="description" content="E-learning, web-based learning platform.">
     <meta name="keywords" content="E-learning, web-based learning, online courses, education, learning platform">
